<resources>
    <!-- General -->
    <string name="app_name">KogiAplicantTest</string>
    <string name="general_api_error">Something is not right… we apologize for it. Please try again later.</string>
    <string name="general_login_success">Success, you are logged in.</string>
    <string name="general_login_fails">Login fails. Please try again later.</string>
    <string name="general_login_denied">Login fails. Please Authorize this application access your account.</string>

    <!-- Dialogs -->
    <string name="dialog_positive_opt">OK</string>
    <string name="dialog_negative_opt">Cancel</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_instagram">Instagram</string>
    <string name="navigation_drawer_twitter">Twitter</string>
    <string name="navigation_drawer_preferences">Settings</string>

    <!-- Splash -->
    <string name="splash_content">KOGI\nFEED</string>

    <!-- Home -->
    <string name="title_activity_main">Home</string>

    <!-- Preferences -->
    <string name="title_activity_settings">@string/navigation_drawer_preferences</string>
    <string name="pref_title_accounts">Accounts</string>
    <string name="pref_title_session_logout_instagram">Instagram Log out</string>
    <string name="pref_session_summary_logout_instagram">Close session from Instagram</string>
    <string name="pref_title_session_logout_twitter">Twitter Log out</string>
    <string name="pref_session_summary_logout_twitter">Close session from Twitter</string>
    <string name="pref_title_session_login_instagram">Instagram Log in</string>
    <string name="pref_session_summary_login_instagram">Have an Instagram account already?</string>
    <string name="pref_title_session_login_twitter">Twitter Log in</string>
    <string name="pref_session_summary_login_twitter">Have an Twitter account already?</string>
    <string name="pref_dialog_title">Log out</string>
    <string name="pref_dialog_message">Are you sure? Logging out will remove all %1$s data from this device</string>

    <!-- Twitter Login -->
    <string name="title_activity_twitter_login">Log in</string>
    <string name="twitter_login_body">See what\'s happening\nin the world right now.</string>

    <!-- Twitter Landing -->
    <string name="title_activity_twitter_landing">%1$s\'s Timeline</string>
    <string name="title_activity_instagram_login">InstagramLoginActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Instagram landing -->
    <string name="title_activity_instagram_landing">InstagramLandingActivity</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_uploads">Uploads</string>

</resources>
