<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_uploads"
        android:enabled="true"
        android:icon="@drawable/ic_uploads"
        android:title="@string/menu_uploads"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>